Update on other fonts
Paralucent and quasimoda added to headers and body text.

--- a/Home.html
+++ b/Home.html
@@ -89,14 +89,21 @@
                 <div class="u-container-layout u-container-layout-1">
                   <h1 class="u-text u-text-default u-text-1">Branding</h1>
 			<style>
-          		h2 {
-           		font-family: paralucent, sans-serif;
-           		font-weight: 900;
-          		font-style: normal;
-         		}
+          		 h2 {
+           		  font-family: paralucent, sans-serif;
+           		  font-weight: 900;
+          		  font-style: normal;
+         		 }
       			</style>
                   <p class="u-text u-text-2">MOUSSE is here to help. <br>We offer the creative services your brand needs&nbsp;<br>for reaching customers, establishing identity,&nbsp;<br>and differentiating itself from the rest.&nbsp;
                   </p>
+			<style>
+       			 p {
+          		  font-family: quasimoda, sans-serif;
+        		  font-weight: 500;
+        		  font-style: normal;
+       			 }
+     			</style>
                   <a href="Home.html#carousel_8e31" data-page-id="185216701" class="u-active-custom-color-5 u-border-none u-btn u-button-style u-custom-color-5 u-hover-custom-color-4 u-btn-1">learn more</a>
                 </div>
               </div>
@@ -137,6 +144,13 @@
         <p class="u-text u-text-1"> You know that artsy friend from your friend group? Mousse is that friend. We bring art to everything we do. <br>
           <br>Our goal isn’t to just deliver what your brand needs, but to deliver a head-turning, jaw-dropping, breath-taking final product that will wow the audience and spark emotion, just like a piece of art would.
         </p>
+	<style>
+         p {
+          font-family: quasimoda, sans-serif;
+          font-weight: 500;
+          font-style: normal;
+       	 }
+     	</style>
         <p class="u-custom-font u-text u-text-custom-color-2 u-text-2">We have an artistic eye or two.</p>
       </div>
     </section>
@@ -148,6 +162,13 @@
         <p class="u-text u-text-1"> Coming up with a creative idea is the easy part. How that idea is executed is what really makes a difference.<br>
           <br>That’s why everyone at MOUSSE is specialized in what they do, and every project that comes our way is approached in a unique, artistic manner.&nbsp;
         </p>
+	<style>
+         p {
+          font-family: quasimoda, sans-serif;
+          font-weight: 500;
+          font-style: normal;
+       	 }
+     	</style>
         <p class="u-custom-font u-text u-text-custom-color-2 u-text-2"> Our team knows what’s up!</p>
       </div>
     </section>
@@ -387,7 +408,21 @@
           </div>
         </div>
         <h2 class="u-text u-text-1">Let's Chat​!</h2>
+	  <style>
+          h2 {
+            font-family: paralucent, sans-serif;
+            font-weight: 900;
+            font-style: normal;
+          }
+          </style>
         <p class="u-text u-text-2">Explore your ideas with us.</p>
+	 <style>
+       	  p {
+       	   font-family: quasimoda, sans-serif;
+       	   font-weight: 500;
+       	   font-style: normal;
+       	  }
+     	 </style>
       </div>
     </section>
     
